SERVER-21848 CSRS catalog manager should not allow batch writes greater than 1